--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,74 +1,96 @@
 <% layout("/layouts/boilerplate.ejs") %>
 <body>
-    <div id="filters">
-        <a href="/listings/category/Rooms" class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-bed"></i>
-            <p>Rooms</p>
-        </div>
-        </a>
-    <a href="/listings/category/Iconic Cities" class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-building"></i>
-            <p>Iconic Cities</p>
-        </div>
-        </a>
-        <a href="/listings/category/Mountains" class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-mountain-sun"></i>
-            <p>Mountains</p>
-        </div>
-        </a>
-        <a href="/listings/category/Castles" class="category-link">
-        <div class="filter">
-            <i class="fa-brands fa-fort-awesome"></i>
-            <p>Castles</p>
-        </div>
-        </a> 
-        <a href="/listings/category/Amazing Pools"  class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-person-swimming"></i>
-            <p>Amazing Pools</p>
-        </div>
-        </a>
-        <a href="/listings/category/Camping" class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-tent"></i>
-            <p>Camping</p>
-        </div>
-        </a>
-        <a href="/listings/category/Farms" class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-tractor"></i>
-            <p>Farms</p>
-        </div>
-        </a>
-        <a href="/listings/category/Arctic" class="category-link">
-        <div class="filter">
-            <i class="fa-regular fa-snowflake"></i>
-            <p>Arctic</p>
-        </div>
-        </a>
-        <a href="/listings/category/Games" class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-football">/ </i>
-            <i class="fa-solid fa-gamepad"></i>
-            <p>Games</p>
-        </div>
-        </a>
-        <a href="/listings/category/Beach Front" class="category-link">
-        <div class="filter">
-            <i class="fa-solid fa-umbrella-beach"></i>
-            <p>Beach Front</p>
-        </div>
-        </a>
-
-        <div class="tax-toggle">
-            <div class="form-check-reverse form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-                <label class="form-check-label" for="flexSwitchCheckDefault">Prices Before Taxes</label>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a href="/listings/category/Rooms" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-bed"></i>
+                <p>Rooms</p>
               </div>
-        </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Iconic Cities" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-building"></i>
+                <p>Iconic Cities</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Mountains" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-mountain-sun"></i>
+                <p>Mountains</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Castles" class="category-link">
+              <div class="filter">
+                <i class="fa-brands fa-fort-awesome"></i>
+                <p>Castles</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Amazing Pools" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-person-swimming"></i>
+                <p>Amazing Pools</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Camping" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-tent"></i>
+                <p>Camping</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Farms" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-tractor"></i>
+                <p>Farms</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Arctic" class="category-link">
+              <div class="filter">
+                <i class="fa-regular fa-snowflake"></i>
+                <p>Arctic</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Games" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-football"></i>/
+                <i class="fa-solid fa-gamepad"></i>
+                <p>Games</p>
+              </div>
+            </a>
+          </li>
+          <li class="page-item">
+            <a href="/listings/category/Beach Front" class="category-link">
+              <div class="filter">
+                <i class="fa-solid fa-umbrella-beach"></i>
+                <p>Beach Front</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      
+      <div class="tax-toggle">
+        <div class="form-check-reverse form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
+            <label class="form-check-label" for="flexSwitchCheckDefault">Prices Before Taxes</label>
+          </div>
     </div>
     
     
