--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -23,7 +23,9 @@
     display: flex;
     justify-content: center;
   }
-  
+  .navbar-collapse{
+    background-color: #fff !important;
+  }
 </style>
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
@@ -32,7 +34,7 @@
       <i class="fa-regular fa-compass"></i>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon sticky-top"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
