--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,5 +1,6 @@
 <style>
   .search-btn {
+    margin-top: 1rem;
     background-color: #fe424d;
     color: #fff;
     border-radius: 25px;
@@ -14,6 +15,7 @@
     margin-right: 0.5rem;
   }
   .search-inp {
+    margin-top: 1rem;
     border-radius: 25px;
     padding: 0.5rem 1rem;
     width: 100%;
@@ -40,17 +42,7 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
-      
-      <!-- Search Bar Always Visible -->
-      <div class="navbar-nav search-container">
-        <form class="d-flex" role="search" action="/listings/search" method="GET">
-          <input class="form-control me-2 search-inp" type="search" name="query" placeholder="Search destinations">
-          <button class="btn search-btn" type="submit">
-            <i class="fa-solid fa-magnifying-glass-location"></i>Search
-          </button>
-        </form>
-      </div>
-
+    
       <!-- User Actions -->
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
