--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,15 @@
 <% layout("/layouts/boilerplate.ejs") %>
 <body>
+  <div class="search-bar">
+  <div class="navbar-nav search-container">
+    <form class="d-flex" role="search" action="/listings/search" method="GET">
+      <input class="form-control me-2 search-inp" type="search" name="query" placeholder="Search destinations">
+      <button class="btn search-btn" type="submit">
+        <i class="fa-solid fa-magnifying-glass-location"></i>Search
+      </button>
+    </form>
+  </div>
+</div>
     <nav aria-label="Page navigation example">
         <ul class="pagination">
           <li class="page-item">
