--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,100 +4,109 @@
     const listing=<%-  JSON.stringify(listing) %>
 </script> 
 
-
-    <div class="row mt-3">
-        <div class="col-8 offset-3">
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-md-8 mx-auto text-center">
             <h3><%= listing.title %></h3>
-            </div>
-    <div class="card show-card listing-card col-5 offset-3">
-        <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="Listing_Image">
-        <div class="card-body">
-          <p class="card-text"><p>Owned_by: <i><b><%= listing.owner.username %></b></i></p>
-            <p><%= listing.description %></p>
-            <p>Category: <%= listing.category %></p>
-            <p>&#8377; <%= listing.price.toLocaleString("en-IN") %></p>
-            <p><%= listing.location %></p>
-            <p><%= listing.country %></p>
-        </p>
         </div>
-
-      </div>
-
-      <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
-
-        <div class="show-btns">
-            <a href="/listings/<%= listing._id %>/edit" class="col-1 offset-3 btn btn-dark">Edit</a>
-
-            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" >
-                <button class="offset-5 btn btn-dark delete-btn">Delete</button>
-            </form>
-        </div> 
-        <% } %>       
-
-
-
-        <!-- For Review -->
-       <div class="col-8 offset-3 mb-3">
-        <% if(currUser) { %>
-            <hr>
-        <h4>Leave a Review</h4>
-        <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
-            
-            <div class="mb-3 mt-3">
-                <label for="rating" class="form-label">Rating:</label>
-                <fieldset class="starability-heartbeat">
-                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                    <label for="first-rate1" title="Terrible">1 star</label>
-                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                    <label for="first-rate2" title="Not good">2 stars</label>
-                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                    <label for="first-rate3" title="Average">3 stars</label>
-                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                    <label for="first-rate4" title="Very good">4 stars</label>
-                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                    <label for="first-rate5" title="Amazing">5 stars</label>
-                </fieldset>
-            </div>
-
-            <div class="mb-3 mt-3">
-                <label for="comment" class="form-label">Comments</label>
-                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-
-                <!-- for validation -->
-                 <div class="invalid-feedback">Please Enter Comment!!</div>
-            </div>
-            <button class="btn btn-outline-dark">submit</button>
-        </form>
-        <hr>
-        <% } %>
-        
-
-        <!-- all reviews -->
-         <% if(listing.reviews.length > 0) { %>
-        <div class="row">
-            <p><b>all Reviews</b></p>
-            <% for(review of listing.reviews){ %>
-                <div class="card col-5 ms-3 mb-3">
-                    <div class="card-body">
-                        <h5>@<%= review.author.username %></h5>
-                        <p class="starability-result" data-rating=<%= review.rating %>></p>
-                        <p class="card-text"><%= review.comment %></p>
-                    </div>
-                    <br>
-                    <form class="mb-3" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-                        <button class="btn btn-sm btn-dark">Delete</button>
-                    </form>
-                </div>
-                <% } %>
-        </div>
-        <% } %>
-       </div>
-       <div class="col-8 offset-3 mb-3">
-        <h3>Where you'll be</h3>
-        <div id="map">
-        </div>
-       </div>
     </div>
 
-    <script src="/js/map.js"></script>
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6">
+            <div class="card show-card listing-card">
+                <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="Listing Image">
+                <div class="card-body">
+                    <p class="card-text">
+                        <p>Owned by: <i><b><%= listing.owner.username %></b></i></p>
+                        <p><%= listing.description %></p>
+                        <p>Category: <%= listing.category %></p>
+                        <p>&#8377; <%= listing.price.toLocaleString("en-IN") %></p>
+                        <p><%= listing.location %></p>
+                        <p><%= listing.country %></p>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
+        <div class="row mt-3 justify-content-center">
+            <div class="col-auto">
+                <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark">Edit</a>
+            </div>
+            <div class="col-auto">
+                <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+                    <button class="btn btn-dark delete-btn">Delete</button>
+                </form>
+            </div>
+        </div> 
+    <% } %>       
+
+    <!-- Reviews Section -->
+    <div class="row mt-4">
+        <div class="col-md-8 mx-auto">
+            <% if(currUser) { %>
+                <hr>
+                <h4>Leave a Review</h4>
+                <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
+                    <div class="mb-3 mt-3">
+                        <label for="rating" class="form-label">Rating:</label>
+                        <fieldset class="starability-heartbeat">
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="comment" class="form-label">Comments</label>
+                        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+                        <div class="invalid-feedback">Please enter a comment!</div>
+                    </div>
+
+                    <button class="btn btn-outline-dark">Submit</button>
+                </form>
+                <hr>
+            <% } %>
+
+            <!-- Display all reviews -->
+            <% if(listing.reviews.length > 0) { %>
+                <h5>All Reviews</h5>
+                <div class="row">
+                    <% for(review of listing.reviews){ %>
+                        <div class="col-md-6">
+                            <div class="card mb-3">
+                                <div class="card-body">
+                                    <h5>@<%= review.author.username %></h5>
+                                    <p class="starability-result" data-rating=<%= review.rating %>></p>
+                                    <p class="card-text"><%= review.comment %></p>
+                                </div>
+                                <form class="mb-3" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                                    <button class="btn btn-sm btn-dark">Delete</button>
+                                </form>
+                            </div>
+                        </div>
+                    <% } %>
+                </div>
+            <% } %>
+        </div>
+    </div>
+
+    <!-- Map Section -->
+    <div class="row mt-4">
+        <div class="col-md-8 mx-auto">
+            <h3>Where you'll be</h3>
+            <div id="map"></div>
+        </div>
+    </div>
+</div>
+
+<script src="/js/map.js"></script>
