--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -98,8 +98,8 @@
       
       <div class="tax-toggle">
         <div class="form-check-reverse form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-            <label class="form-check-label" for="flexSwitchCheckDefault">Prices Before Taxes</label>
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" >
+            <label class="form-check-label" for="flexSwitchCheckDefault">Prices after Taxes</label>
           </div>
     </div>
     
